# EarningsEdge

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
app/: main.py
app/components/: charts.py  theme.py
app/pages/: 00_watchlist.py  01_ticker_analysis.py  02_tone_drift.py  03_backtest_results.py  04_rag_evaluation.py  home.py
config/: .env.example  __init__.py  settings.py
src/: __init__.py  pipeline_runner.py
src/analysis/: contradiction_detector.py  earnings_quality_scorer.py  guidance_accuracy.py  sentiment_analyzer.py  tone_drift_detector.py
src/backtest/: backtester.py  benchmark.py  metrics.py  signal_generator.py
src/embeddings/: embedder.py  retriever.py  vector_store.py
src/evaluation/: mlflow_tracker.py  ragas_evaluator.py
src/ingestion/: analyst_fetcher.py  data_validator.py  sec_fetcher.py  transcript_fetcher.py
src/processing/: chunker.py  document_parser.py  metadata_tagger.py  ner_extractor.py  text_cleaner.py
src/rag/: graph.py  llm_client.py  multi_hop_chain.py  nodes.py  prompts.py
src/utils/: cache.py  helpers.py  rate_limiter.py
tests/: test_rag_logic.py
