[project]
name = "earningsedge"
version = "0.1.0"
description = "Production-grade multi-modal RAG system for earnings sentiment drift and surprise signal detection"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "EarningsEdge" }]

dependencies = [
    # LLM clients
    "groq>=0.9.0",
    "google-generativeai>=0.7.0",
    # LangChain / LangGraph orchestration
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-google-genai>=2.0.0",
    # Embeddings
    "sentence-transformers>=3.1.0",
    "transformers>=4.44.0",
    "torch>=2.4.0",
    # Vector DB
    "chromadb>=0.5.0",
    # NLP
    "spacy>=3.7.0",
    # Financial data
    "yfinance>=0.2.40",
    # RAG evaluation
    "ragas>=0.1.0",
    # Backtesting
    "vectorbt>=0.26.0",
    # HTTP
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    # Data
    "pandas>=2.2.0",
    "polars>=1.7.0",
    "numpy>=1.26.0",
    # PDF parsing
    "pdfplumber>=0.11.0",
    # Config + validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    # Logging
    "loguru>=0.7.0",
    # Experiment tracking
    "mlflow>=2.16.0",
    # Visualization / Frontend
    "streamlit>=1.38.0",
    "plotly>=5.24.0",
    "networkx>=3.3",
    # Utilities
    "tenacity>=9.0.0",
    "diskcache>=5.6.0",
    "tqdm>=4.66.0",
    "en-core-web-trf",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.hatch.build.targets.wheel]
packages = ["src", "app", "config"]

[tool.uv.sources]
en-core-web-trf = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.8.0/en_core_web_trf-3.8.0-py3-none-any.whl" }
